tests/fsharp/typecheck/sigs/neg_byref_17.fs
module Test
let vvv       = unbox null : int byref;;
let f (x:obj) = unbox x    : int byref;;
